--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Título y descripción -->
-    <title>MediBot - Plataforma médica segura</title>
+    <title>MediBot</title>
     <meta name="description" content="MediBot es una plataforma digital para que los profesionales de la salud gestionen de forma segura la información clínica de sus pacientes." />
 
     <!-- SEO básico -->
